[project]
name = "vertopal"
version = "1.0.6"

description = "Convert your files in terminal using Vertopal API"
readme = "README.md"
requires-python = ">=3.7, <4"
license = {text = "MIT"}

keywords = ["convert", "file", "vertopal", "api", "converter"]

authors = [
  {name = "Vertopal", email = "contact@vertopal.com" }
]

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Intended Audience :: Developers",
  "Intended Audience :: End Users/Desktop",
  "Intended Audience :: Information Technology",
  "Intended Audience :: Science/Research",
  "Topic :: Software Development :: Libraries",
  "License :: OSI Approved :: MIT License",
]

dependencies = [
  "requests"
]

[project.urls]
"Homepage" = "https://www.vertopal.com"
"Funding" = "https://www.vertopal.com/en/donate"
"Source" = "https://github.com/vertopal/vertopal-cli"
"Bug Tracker" = "https://github.com/vertopal/vertopal-cli/issues"

[project.scripts]
vertopal = "vertopal.vertopal:main"

[tool.setuptools]

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"
